--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 02:54:00 PM</p>
+    <p class="lastupdate">09/12/2020 02:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">94.8&#176;F</td>
+        <td class="data">94.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">94.8&#176;F</td>
+        <td class="data">94.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">94.8&#176;F</td>
+        <td class="data">94.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.835 inHg (-0.087)</td>
+        <td class="data">29.835 inHg (-0.085)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">4 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.0&#176;F</td>
+        <td class="data">74.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:53:12 PM">
-            94.8</span><br/>
+          <span title="02:55:36 PM">
+            95.0</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:53:12 PM" class="hival">
-            94.8</span>
+          <span title="02:55:36 PM" class="hival">
+            95.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:16:01 AM">
             29.972</span><br/>
-          <span title="02:52:02 PM">
-            29.834</span>
+          <span title="02:54:02 PM">
+            29.833</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          171
+          172
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          225
+          224
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:51:02 PM">
-            74.0</span><br/>
+          <span title="02:55:02 PM">
+            74.1</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 0 hours, 7 minutes</td>
+      <td class="data">11 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 0 hours, 7 minutes</td>
+      <td class="data">11 days, 0 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
