--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 02:59:00 PM</p>
+    <p class="lastupdate">09/12/2020 03:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">94.7&#176;F</td>
+        <td class="data">94.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">94.7&#176;F</td>
+        <td class="data">94.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">94.7&#176;F</td>
+        <td class="data">94.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">34.2&#176;F</td>
+        <td class="data">39.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">12%</td>
+        <td class="data">15%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.835 inHg (-0.085)</td>
+        <td class="data">29.832 inHg (-0.086)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph S (180&#176;)</td>
+        <td class="data">5 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.1&#176;F</td>
+        <td class="data">74.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:16:01 AM">
             29.972</span><br/>
-          <span title="02:54:02 PM">
-            29.833</span>
+          <span title="03:01:02 PM">
+            29.832</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:52:52 PM">
-            10</span><br/>
-          211
+          <span title="03:01:48 PM">
+            11</span><br/>
+          199
         </td>
         <td class="data new_row hilo_week">
           <span title="03:36:26 PM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          172
+          173
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          341
+          340
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:55:02 PM">
-            74.1</span><br/>
+          <span title="03:02:02 PM">
+            74.2</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 0 hours, 12 minutes</td>
+      <td class="data">11 days, 0 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 0 hours, 12 minutes</td>
+      <td class="data">11 days, 0 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
