--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 03:14:00 PM</p>
+    <p class="lastupdate">09/12/2020 03:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">93.5&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">93.5&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">93.5&#176;F</td>
+        <td class="data">92.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">35.2&#176;F</td>
+        <td class="data">34.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.830 inHg (-0.080)</td>
+        <td class="data">29.831 inHg (-0.077)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">11 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.4&#176;F</td>
+        <td class="data">74.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">35%</td>
+        <td class="data">34%</td>
       </tr>
     </tbody>
   </table>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="03:12:00 PM">
-            14</span><br/>
-          180
+          <span title="03:16:26 PM">
+            16</span><br/>
+          209
         </td>
         <td class="data new_row hilo_week">
           <span title="03:36:26 PM (Wednesday)">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          176
+          179
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          223
+          222
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          340
+          339
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:10:02 PM">
-            74.4</span><br/>
+          <span title="03:17:02 PM">
+            74.6</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             43</span><br/>
-          <span title="02:51:02 PM">
-            35</span>
+          <span title="03:17:02 PM">
+            34</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:57:01 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 0 hours, 27 minutes</td>
+      <td class="data">11 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 0 hours, 27 minutes</td>
+      <td class="data">11 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
