--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 03:44:00 PM</p>
+    <p class="lastupdate">09/12/2020 03:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">90.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">90.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">91.2&#176;F</td>
+        <td class="data">90.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">33.5&#176;F</td>
+        <td class="data">34.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">13%</td>
+        <td class="data">14%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.828 inHg (-0.069)</td>
+        <td class="data">29.825 inHg (-0.068)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">10 mph S (180&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.3&#176;F</td>
+        <td class="data">75.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:16:01 AM">
             29.972</span><br/>
-          <span title="03:33:02 PM">
-            29.825</span>
+          <span title="03:47:02 PM">
+            29.824</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="03:30:32 PM">
-            18</span><br/>
-          198
+          <span title="03:46:00 PM">
+            19</span><br/>
+          197
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:30:32 PM (Saturday)">
-            18</span><br/>
-          198
+          <span title="03:46:00 PM (Saturday)">
+            19</span><br/>
+          197
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 01:02:40 PM">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          2</td>
+          3</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          184
+          185
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          219
+          218
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:43:02 PM">
-            75.3</span><br/>
+          <span title="03:47:02 PM">
+            75.5</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 0 hours, 58 minutes</td>
+      <td class="data">11 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 0 hours, 57 minutes</td>
+      <td class="data">11 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
